--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  # FIXME 1: Update the packages
   isar: ^3.0.5
   isar_generator: ^3.0.5
   build_runner: ^2.3.2
